--- a/SocialNetworkAnalysis.UI/SocialNetworkAnalysis.UI.csproj
+++ b/SocialNetworkAnalysis.UI/SocialNetworkAnalysis.UI.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetworkAnalysis.Core\SocialNetworkAnalysis.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net10.0-windows</TargetFramework>
